--- a/app/src/main/res/layout/activity_registro_sensor.xml
+++ b/app/src/main/res/layout/activity_registro_sensor.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".red_sensores">
+    tools:context=".registro_sensor">
 
     <LinearLayout
         android:layout_width="395dp"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:layout_marginVertical="50dp"
-            android:text="Sensor"
+            android:text="Nuevos datos del Sensor"
             android:textSize="40dp"
             android:gravity="center_horizontal"/>
 
@@ -36,21 +36,31 @@
                 app:srcCompat="@drawable/temperature" />
 
             <TextView
-                android:id="@+id/tempTx"
-                android:layout_width="wrap_content"
+                android:id="@+id/temp"
+                android:layout_width="220dp"
                 android:layout_height="63dp"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Temperatura Actual"
                 android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/tempEtAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="6"
+                android:textAlignment="textEnd"
+                android:hint="00"
+                android:textSize="24sp"
+                android:gravity="end"
+                android:inputType="numberDecimal" />
 
             <TextView
                 android:id="@+id/tempVal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="°C"
+                android:text=" °C"
                 android:textSize="24sp"/>
 
         </LinearLayout>
@@ -68,18 +78,28 @@
 
             <TextView
                 android:id="@+id/humedadTx"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="63dp"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Humedad"
                 android:textSize="24sp" />
+
+            <EditText
+                android:id="@+id/humedadEtAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="6"
+                android:textAlignment="textEnd"
+                android:hint="00"
+                android:textSize="24sp"
+                android:gravity="end"
+                android:inputType="number"/>
 
             <TextView
                 android:id="@+id/humedadVal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="right|center_vertical"
                 android:text=" %"
                 android:textSize="24sp" />
@@ -99,21 +119,40 @@
 
             <TextView
                 android:id="@+id/pesotx"
-                android:layout_width="wrap_content"
+                android:layout_width="220dp"
                 android:layout_height="63dp"
-                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="Peso"
                 android:textSize="24sp"/>
+
+            <EditText
+                android:id="@+id/pesoEtAdd"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="4"
+                android:textAlignment="textEnd"
+                android:hint="00"
+                android:textSize="24sp"
+                android:gravity="end"
+                android:inputType="numberDecimal"/>
 
             <TextView
                 android:id="@+id/pesoVal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="right|center_vertical"
-                android:text="00"
+                android:text=" g"
                 android:textSize="24sp" />
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btAddSensor"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:onClick="subirDatos"
+            android:text="AGREGAR" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
